# feedgod

./: .env.example  .eslintrc.json  CLAUDE.md  QUICKSTART.md  README.md  middleware.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vercel.json  vitest.config.ts
.ralph-tui/: progress.md  session-meta.json
app/: globals.css  layout.tsx  page.tsx
components/: AIAssistant.tsx  AIJudgeBuilder.tsx  AggregatorPanel.tsx  BulkFeedCreator.tsx  ChainSelector.tsx  CommandBar.tsx  ConditionBuilder.tsx  CustomAPIBuilder.tsx  CustomSourceModal.tsx  DataSourcesPanel.tsx  FeedBuilder.tsx  FeedConfiguration.tsx  FeedPreview.tsx  Footer.tsx  FunctionBuilder.tsx  GovernanceBuilder.tsx  GovernancePreview.tsx  Header.tsx  HeroSection.tsx  JSONPathSelector.tsx  LiveOracleCard.tsx  MetricSelector.tsx  ModuleCard.tsx  ModuleTiles.tsx  MusicPlayer.tsx  NetworkMismatchBanner.tsx  OfflineIndicator.tsx  OracleCard.tsx  OracleDetailModal.tsx  OracleSearchBar.tsx  OracleSparkline.tsx  PredictionMarketBuilder.tsx  PriceChart.tsx  SecretBuilder.tsx  SocialBuilder.tsx  SportsBuilder.tsx  TabNavigation.tsx  VRFBuilder.tsx  WalletButton.tsx  WeatherBuilder.tsx
contexts/: ThemeContext.tsx
data/: cities.ts  leagues.ts
e2e/: command-bar.spec.ts  feed-builder.spec.ts  homepage.spec.ts
hooks/: index.ts  useDebounce.ts  useDeployment.ts  useFeedConfig.ts  usePriceFetching.ts
lib/: ai-assistant-extended.ts  ai-assistant.ts  (+21 more)
programs/arena/: Anchor.toml  Cargo.toml  README.md
programs/arena/src/: lib.rs
programs/arena/tests/: arena.ts
(+139 files in other folders)
