[package]
name = "feedgod-arena"
version = "0.1.0"
description = "FeedGod Arena - Prediction markets powered by Switchboard oracles"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "feedgod_arena"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
switchboard-solana = "0.29.0"
